{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "d3f7c1da-3f33-41d8-a77b-a4c3a544e3ad",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "003121ea-0373-4869-8ac1-6df38ccdb39f",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "8d58a106-63d9-494e-a5db-f65faa0d9f30",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "a87dc691-ad20-40bd-94ba-e079f7e364f5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DodgeRoll",
                    "type": "Button",
                    "id": "0a9f35d4-771a-4a0c-b3d8-d5af11f64248",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PullArrow",
                    "type": "Button",
                    "id": "995c3629-a30f-4b09-b7fa-64821bf429d6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d552ef19-a4c5-4f2a-b457-0bae72120ac9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83adc26e-7651-4619-bf1a-1ad6e2541464",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43efffe3-d2bd-4081-86c2-228a0384bdd0",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DodgeRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7420c1a-5dee-4e5a-924f-bf7722669410",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "292e66fd-6007-464d-8b3b-f628df0612c6",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PullArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "6f36149a-bcd6-4195-a611-1b9ab7a12f9b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "6cbda331-3b72-4cc8-b3b1-a22fa546c51e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "bd769f4b-bd6c-47cf-987d-98413686fa14",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "e9b75867-c4b8-452b-9647-6d8b9f9328cf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "3997ddfd-9c99-4a76-93fe-43b9728f55a7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6d34bace-4386-4278-845e-95a8b9a994ae",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abd73d6d-ca98-4555-abac-3ae480816de0",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d775e05-f2de-46b3-a867-0655f3ff5e86",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b815a2b-bd48-4074-9856-558364c2cdd1",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "445d891f-d678-49d7-9088-30c96ba5d9d0",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RSAim_RTShoot",
            "id": "06ca8862-3fb7-4994-b3de-c1d7ac81d038",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "c670dce0-aef5-4848-b407-e8d2dc62ca33",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "27e56ea8-b664-4271-b683-c42da0a274ec",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "74d2faed-dde2-46b8-8493-5537ca3ce650",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d0b86b35-22b9-4b7d-8d58-ead90d46b016",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b79c39eb-45ed-4400-bc3c-a4b573ac0725",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bef2fef3-b6c9-4352-b68a-5d3405832b0c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RSAimShoot",
            "id": "c97f9add-a2fd-4864-894b-91f7c4faac07",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "bcc74a0b-87f8-46ee-b6b8-d1ddbddf6c52",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "5da3066e-9105-465f-b9fa-22f4ab3fced4",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Value",
                    "id": "c18dea9a-6d6f-4732-9847-c8b072210b4c",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "56eb9404-008b-406d-b214-f721081a2ee9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6fe24cf1-8fe7-43a4-911b-7f283afeac9a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5d09bb5-e552-4893-a49a-251477bd22d3",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.8,max=1)",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}